# auto_navigation_vidalia

./: .gitignore  .test_lidar_scan_validate.py.swp  CHANGELOG.md  CLAUDE.md  README.md  main.py  requirements.txt  run.sh  service_config.json  test_lidar_3d_snapshot_view.py  test_lidar_live_html.py  test_lidar_live_view.py  test_lidar_scan_validate.py  test_lidar_slow_drive.py
camera/: depth_obstacle.py  depth_to_points.py  oak_driver.py  row_detector_depth_edge.py  row_detector_visual.py  soybean_row_tracker.py
canbus/: canbus_interface.py
config/: velodyne_transform.yaml
lidar/: lidar_driver.py  obstacle_filter.py
navigation/: ekf_estimator.py  filter_heading.py  headland.py  nav_logic.py  odometry.py  rl_controller.py  rl_policy.py  row_controller.py  row_mpc_controller.py  row_navigator.py  row_navigator_cam.py  row_perception.py  row_safety.py  run_metrics.py  run_record.py  scan_accumulator.py  scan_recorder.py  state_logic.py  telemetry.py
policies/: follow.npz  follow_field.npz  follow_gentle.npz  follow_jerk1.0.npz  follow_jerk3.0.npz  follow_jerk8.0.npz  follow_residual.npz  follow_residual_jerk1.0.npz  follow_residual_jerk3.0.npz  follow_residual_jerk8.0.npz
results/: controller_pareto.csv
ros2_bridge/: Dockerfile  entrypoint.sh  install_autostart.sh  laptop_setup.sh  start.sh  (+1 more)
src/vidalia_bringup/: package.xml  setup.cfg  setup.py
src/vidalia_bringup/config/: ekf.yaml  field_coverage.yaml  nav2_params.yaml  tf_velodyne.yaml  velodyne_transform.yaml
src/vidalia_bringup/launch/: amiga_bringup_nodes.launch.py  amiga_grpc_bridge.launch.py  autonomous_coverage.launch.py  bringup_sensors.launch.py  field_coverage.launch.py  localize_nav.launch.py  nav2.launch.py  row_follower.launch.py  row_following_slam.launch.py  sensors_live.launch.py  slam_bag_replay.launch.py  slam_full.launch.py  slam_live.launch.py  slam_localization.launch.py  slam_nav.launch.py  slam_rtabmap_lidar3d.launch.py  static_tf.launch.py  tf_static.launch.py  tf_static_base_to_velodyne.launch.py  velodyne_vlp16.launch.py
src/vidalia_bringup/rviz/: slam_lidar.rviz
src/vidalia_bringup/test/: test_flake8.py
src/vidalia_bringup/urdf/: amiga_min.urdf
src/vidalia_bringup/vidalia_bringup/: amiga_odometry.py  amiga_ros2_bridge.py  amiga_velocity_bridge.py  autonomous_row_coverage.py  field_coverage_planner.py  lidar_center_row_follower.py
(+62 files in other folders)
